# dson

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix
.github/workflows/: check.yml  scheduled.yml  test.yml
benches/: iai.rs  nested_transactions.rs  tango.rs
examples/: conflicts.rs  nested_transactions.rs  simple.rs  transaction_basic.rs  transaction_conflicts.rs  transaction_nested.rs  transaction_sync.rs
src/: api.rs  causal_context.rs  crdts.rs  datetime_literal.rs  dotstores.rs  either.rs  json.rs  lib.rs  macros.rs  sentinel.rs
src/api/: array.rs  map.rs  register.rs  timestamp.rs
src/causal_context/: interval.rs
src/crdts/: mvreg.rs  orarray.rs  ormap.rs  snapshot.rs  test_util.rs
src/crdts/orarray/: position.rs
src/crdts/test_util/: arbitrary_delta_impls.rs  qc_arbitrary_impls.rs  qc_arbitrary_ops.rs
src/crdts/test_util/arbitrary_delta_impls/: mvreg.rs  orarray.rs  ormap.rs
src/dotstores/: recording_sentinel.rs
src/snapshots/: dson__macros__tests__crdt_map_literal_macro.snap  dson__macros__tests__crdt_map_literal_macro_array.snap  dson__macros__tests__crdt_map_store_macro.snap
src/transaction/: array_transaction.rs  conflicted.rs  crdt_value.rs  delta.rs  map_transaction.rs  mod.rs
tests/: nested_transactions.rs  transaction_api.rs  transaction_rollback.rs
